[project]
name = "cell-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "python-bioformats>=4.1.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
]

[tool.black]
line-length =  79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]  # For compatibility with Black (optional)
